--- a/bucketlist-frontend/src/index.html
+++ b/bucketlist-frontend/src/index.html
@@ -7,7 +7,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/bootstrap/js/bootstrap.js"></script>
+  <!--<script src="assets/bootstrap/js/npm.js"></script>-->
 </head>
 <body>
   <app-root>Loading...</app-root>
